--- a/index.html
+++ b/index.html
@@ -390,9 +390,13 @@
                     <!-- End Single Item -->
                   </div>
                 </div>
-                <a class="btn btn-md btn-gradient animation" href="gallery.html"
-                  >View All</a
-                >
+                <div class="site-heading text-center">
+                  <a
+                    class="btn btn-md btn-gradient animation"
+                    href="gallery.html"
+                    >View All</a
+                  >
+                </div>
               </div>
             </div>
           </div>
