--- a/about.html
+++ b/about.html
@@ -347,8 +347,8 @@
                       </p>
                       <a
                         class="btn btn-md btn-dark animation"
-                        href="project-details.html"
-                        >View project</a
+                        href="airbnb.html"
+                        >Get Started</a
                       >
                     </div>
                   </div>
@@ -385,8 +385,8 @@
                       </p>
                       <a
                         class="btn btn-md btn-dark animation"
-                        href="project-details.html"
-                        >View project</a
+                        href="airbnb.html"
+                        >Get Started</a
                       >
                     </div>
                   </div>
