--- a/airbnb.html
+++ b/airbnb.html
@@ -424,8 +424,8 @@
               <a
                 class="btn mt-30 btn-md circle btn-gradient animation"
                 href="contact.html"
-                >Send Message</a
-              >
+                >Get a Quote <i class="fa fa-paper-plane"></i
+              ></a>
             </div>
           </div>
         </div>
