--- a/gallery.html
+++ b/gallery.html
@@ -218,6 +218,132 @@
                       </div>
                     </div>
                     <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/11.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/12.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/13.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/14.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/15.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/16.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/17.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/18.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/19.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/20.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/21.jpeg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/22.jpeg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/23.jpeg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/24.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
                   </div>
                 </div>
               </div>
