--- a/services.html
+++ b/services.html
@@ -85,15 +85,7 @@
             >
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                  >Services</a
-                >
-                <ul class="dropdown-menu">
-                  <li><a href="services.html">Our Services</a></li>
-                  <li><a href="airbnb.html">Airbnb Cleaning</a></li>
-                </ul>
-              </li>
+              <li><a href="services.html">Services</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -234,6 +226,299 @@
       </div>
     </div>
     <!-- End Services -->
+    <div class="services-details-area default-padding">
+      <div class="container">
+        <div class="services-details-items">
+          <div class="row">
+            <div
+              class="col-xl-8 col-lg-7 pr-45 pr-md-15 pr-xs-15 services-single-content"
+            >
+              <div class="service-single-thumb">
+                <!-- <img src="assets/img/services/1.jpg" alt="Thumb" /> -->
+              </div>
+              <h2>Airbnb Cleaning</h2>
+              <p>
+                Maintaining a pristine Airbnb property is pivotal for guest
+                satisfaction and upholding a stellar reputation. Our
+                comprehensive Airbnb cleaning checklist ensures a clean and
+                inviting living space, setting the stage for unforgettable guest
+                stays.
+              </p>
+              <div class="features mt-40 mt-xs-30 mb-30 mb-xs-20">
+                <div class="row">
+                  <div class="col-lg-5 col-md-6">
+                    <div class="content">
+                      <h3>Included Services</h3>
+                      <ul class="feature-list-item">
+                        <li>General Cleaning</li>
+                        <li>Bathrooms</li>
+                        <li>Bedrooms</li>
+                        <li>Entrance and Common Areas</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-7 col-md-6 mt-xs-30">
+                    <div class="content">
+                      <h3>Elevating your Airbnb Experience</h3>
+                      <p>
+                        At Regal Stay Cleaning, we are dedicated to redefining
+                        hospitality through our specialized Airbnb cleaning
+                        services. With a deep understanding of the unique
+                        demands of the short-term rental industry, we take pride
+                        in ensuring your property is a haven of comfort,
+                        cleanliness, and relaxation for your esteemed guests.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <h3>What we do?</h3>
+              <p>
+                Our mission is to provide exceptional Airbnb cleaning services
+                that transform your property into a haven of comfort and
+                pristine cleanliness. We understand that in the world of
+                short-term rentals, first impressions are crucial. Our team of
+                experienced and dedicated cleaning professionals ensures that
+                your property welcomes guests with an immaculate environment.
+                From meticulously dusting every surface to sanitizing bathrooms
+                and replenishing essential amenities, we leave no stone unturned
+                in our pursuit of excellence. Our tailored cleaning solutions
+                are designed to meet the unique needs of your property, whether
+                it's a charming apartment or a sprawling villa. By entrusting us
+                with the essential task of cleaning, you can focus on delivering
+                unforgettable guest experiences and growing your Airbnb
+                business. With Regal Stay Cleaning, your property will stand as
+                a shining example of hospitality, making a lasting impact on
+                every guest who walks through the door.
+              </p>
+
+              <div class="faq-style-one service-faq mt-40">
+                <h2 class="mb-30">Frequently Asked Questions</h2>
+                <div class="accordion mt--20" id="faqAccordion">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                      <button
+                        class="accordion-button"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne"
+                        aria-expanded="true"
+                        aria-controls="collapseOne"
+                      >
+                        How long will it take to clean my property?
+                      </button>
+                    </h2>
+                    <div
+                      id="collapseOne"
+                      class="accordion-collapse collapse show"
+                      aria-labelledby="headingOne"
+                      data-bs-parent="#faqAccordion"
+                    >
+                      <div class="accordion-body">
+                        <p>
+                          The time required for the service varies based on the
+                          property's size. As an example, a 2-bedroom unit
+                          typically takes around 2 hours on-site. For an average
+                          estimation, please liaise with our customer service
+                          team.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo"
+                        aria-expanded="false"
+                        aria-controls="collapseTwo"
+                      >
+                        How long in advance should i book the cleaning service?
+                      </button>
+                    </h2>
+                    <div
+                      id="collapseTwo"
+                      class="accordion-collapse collapse"
+                      aria-labelledby="headingTwo"
+                      data-bs-parent="#faqAccordion"
+                    >
+                      <div class="accordion-body">
+                        <p>
+                          We suggest a booking window of 24 hours. For key dates
+                          such as bank holiday weekends and festivals, we advise
+                          making reservations as far in advance as feasible.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree"
+                        aria-expanded="false"
+                        aria-controls="collapseThree"
+                      >
+                        Do i need to provide my own cleaning equipment?
+                      </button>
+                    </h2>
+                    <div
+                      id="collapseThree"
+                      class="accordion-collapse collapse"
+                      aria-labelledby="headingThree"
+                      data-bs-parent="#faqAccordion"
+                    >
+                      <div class="accordion-body">
+                        <p>
+                          In general, our appointed Airbnb cleaner will provide
+                          their own equipment, unless specified otherwise.
+                          Nevertheless, you have the option to furnish your
+                          cleaning equipment if desired, particularly if you
+                          have specific scent preferences.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="col-xl-4 col-lg-5 mt-md-50 mt-xs-50 pl-30 pl-md-15 pl-xs-15 services-sidebar"
+            >
+              <!-- Single Widget -->
+              <!-- End Single Widget -->
+              <div
+                class="single-widget quick-contact-widget text-light"
+                style="background-image: url(assets/img/thumb/4.jpg)"
+              >
+                <div class="content">
+                  <h3>Need Help?</h3>
+                  <p>
+                    For any assistance needed, please don't hesitate to reach
+                    out to us. We're here to help.
+                  </p>
+                  <h2>+441582753283</h2>
+                  <h4>
+                    <a href="mailto:cleaning@regalstay.co.uk"
+                      >cleaning@regalstay.co.uk</a
+                    >
+                  </h4>
+                  <a
+                    class="btn mt-30 circle btn-sm btn-gradient"
+                    href="contact.html"
+                    >Contact Us</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="project-style-two-area default-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 offset-lg-2">
+            <div class="site-heading text-center">
+              <h5 class="sub-title">Airbnb Cleaning</h5>
+              <h2 class="title">Gallery</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12 gallery-content">
+                <div class="magnific-mix-gallery masonary">
+                  <div id="gallery-masonary" class="gallery-items colums-2">
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/1.jpeg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/2.jpeg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/3.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/4.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/5.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/6.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-deal-area text-center default-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 offset-lg-2">
+            <div class="project-deal">
+              <h2 class="title">
+                <strong>Airbnb Cleaning Services?</strong> <br />
+                Let’s talk & improve your property
+              </h2>
+              <a
+                class="btn mt-30 btn-md circle btn-gradient animation"
+                href="contact.html"
+                >Get a Quote <i class="fa fa-paper-plane"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Start Testimonial Area 
     ============================================= -->
     <div
