--- a/index.html
+++ b/index.html
@@ -85,15 +85,7 @@
             >
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                  >Services</a
-                >
-                <ul class="dropdown-menu">
-                  <li><a href="services.html">Our Services</a></li>
-                  <li><a href="airbnb.html">Airbnb Cleaning</a></li>
-                </ul>
-              </li>
+              <li><a href="services.html">Services</a></li>
 
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="contact.html">Contact Us</a></li>
