--- a/services.html
+++ b/services.html
@@ -398,8 +398,8 @@
                 <div class="content">
                   <h3>Need Help?</h3>
                   <p>
-                    For any assistance needed, please don't hesitate to reach
-                    out to us. We're here to help.
+                    For any assistance needed, don't hesitate to reach out to
+                    us. We're here to help.
                   </p>
                   <h2>+441582753283</h2>
                   <h4>
