--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,10 @@
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
+    <script
+      src="https://kit.fontawesome.com/2878e73a9f.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
       rel="stylesheet"
@@ -250,6 +254,8 @@
                     <h4 class="title">Email</h4>
                     <a href="mailto:cleaning@regalstay.co.uk"
                       >cleaning@regalstay.co.uk</a
+                    ><br /><a href="mailto:info@regalstay.co.uk"
+                      >info@regalstay.co.uk</a
                     >
                   </div>
                 </li>
@@ -258,17 +264,34 @@
                     <h4 class="title">Follow Us</h4>
                     <ul class="social-link">
                       <li>
-                        <a class="facebook" href="#" target="_blank"
+                        <a
+                          class="facebook"
+                          href="https://www.facebook.com/profile.php?id=100089841392314"
+                          target="_blank"
                           ><i class="fa fa-facebook"></i
                         ></a>
                       </li>
                       <li>
-                        <a class="twitter" href="#" target="_blank"
+                        <a
+                          class="twitter"
+                          href="https://twitter.com/regal_stay"
+                          target="_blank"
                           ><i class="fa fa-twitter"></i
                         ></a>
                       </li>
                       <li>
-                        <a class="linkedin" href="#" target="_blank"
+                        <a
+                          class="instagram"
+                          href="https://www.instagram.com/regalstay"
+                          target="_blank"
+                          ><i class="fa-brands fa-instagram"></i
+                        ></a>
+                      </li>
+                      <li>
+                        <a
+                          class="linkedin"
+                          href="https://www.linkedin.com/in/regal-stay"
+                          target="_blank"
                           ><i class="fa fa-linkedin"></i
                         ></a>
                       </li>
