--- a/gallery.html
+++ b/gallery.html
@@ -456,7 +456,7 @@
                   <li>
                     <div class="content">
                       <strong>Phone:</strong>
-                      <a href="tel:+441582753283">+441582753283</a>
+                      <a href="tel:+441582753283">+44 158 275 3283</a>
                     </div>
                   </li>
                 </ul>
