--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
           <div class="col-tact-stye-one col-lg-6">
             <div class="contact-form-style-one">
               <form
-                action="contact.php"
+                action="https://formsubmit.io/send/mo@regalstay.co.uk"
                 method="POST"
                 class="contact-form contact-form"
               >
@@ -207,9 +207,25 @@
                     </div>
                   </div>
                 </div>
+                <input
+                  name="_formsubmit_id"
+                  type="text"
+                  style="display: none"
+                />
+                <input
+                  name="_redirect"
+                  type="hidden"
+                  id="name"
+                  value="index.html"
+                />
                 <div class="row">
                   <div class="col-lg-12">
-                    <button type="submit" name="submit" id="submit">
+                    <button
+                      type="submit"
+                      name="submit"
+                      id="submit"
+                      value="submit"
+                    >
                       <i class="fa fa-paper-plane"></i> Get in Touch
                     </button>
                   </div>
