--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
           <div class="col-tact-stye-one col-lg-6">
             <div class="contact-form-style-one">
               <form
-                action="https://formsubmit.io/send/mo@regalstay.co.uk"
+                action="contact.php"
                 method="POST"
                 class="contact-form contact-form"
               >
@@ -207,25 +207,9 @@
                     </div>
                   </div>
                 </div>
-                <input
-                  name="_formsubmit_id"
-                  type="text"
-                  style="display: none"
-                />
-                <input
-                  name="_redirect"
-                  type="hidden"
-                  id="name"
-                  value="index.html"
-                />
                 <div class="row">
                   <div class="col-lg-12">
-                    <button
-                      type="submit"
-                      name="submit"
-                      id="submit"
-                      value="submit"
-                    >
+                    <button type="submit" name="submit" id="submit">
                       <i class="fa fa-paper-plane"></i> Get in Touch
                     </button>
                   </div>
@@ -431,7 +415,7 @@
                   <li>
                     <div class="content">
                       <strong>Phone:</strong>
-                      <a href="tel:+441582753283">+44 158 275 3283</a>
+                      <a href="tel:+441582753283">+441582753283</a>
                     </div>
                   </li>
                 </ul>
