--- a/airbnb.html
+++ b/airbnb.html
@@ -268,7 +268,7 @@
                       <i class="fa-solid fa-spray-can-sparkles"></i>
                       <h4><a href="#">Regular Cleaning</a></h4>
                       <p>
-                        Elevate your space with our Standard Cleaning Service,
+                        Elevate your space with our Regular Cleaning Service,
                         designed to maintain a consistent level of cleanliness.
                         Choose this service for regular upkeep that leaves your
                         space inviting and comfortable.
@@ -282,7 +282,7 @@
                       <p>
                         Experience the ultimate in cleanliness with our Deep
                         Cleaning Service. We ensure a thorough restoration of
-                        hygiene and freshness that standard cleaning just can't
+                        hygiene and freshness that regular cleaning just can't
                         match.
                       </p>
                     </div>
