--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                     data-wow-duration="400ms"
                   >
                     Leave a lasting impression on your guests with our
-                    exceptional first impression cleaning services. We set the
-                    industry standard by delivering meticulous and thorough
-                    cleaning, ensuring a welcoming and pristine environment.
+                    exceptional cleaning services. We set the industry standard
+                    by delivering meticulous and thorough cleaning, ensuring a
+                    welcoming and pristine environment.
                   </p>
                   <div
                     class="button mt-40 wow fadeInUp"
@@ -304,6 +304,33 @@
       </div>
     </div>
     <!-- End Why Choose Us -->
+    <!-- Start Blog
+    ============================================= -->
+    <div class="blog-area single full-blog full-blog">
+      <div class="container">
+        <div class="blog-items">
+          <div class="row">
+            <div
+              class="blog-content wow fadeInUp col-lg-10 offset-lg-1 col-md-12"
+            >
+              <div class="blog-style-one item">
+                <div class="blog-item-box">
+                  <div class="info">
+                    <blockquote>
+                      We only use professional cleaning products provided by our
+                      special suppliers. We use Linen Hire from specialised
+                      cleaning linen hire companies. After every use, we make
+                      sure to clean and disinfect all the products we use.
+                    </blockquote>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Blog -->
     <!-- Start Project 
     ============================================= -->
     <div class="project-style-two-area default-padding">
@@ -563,7 +590,7 @@
                         <div class="content">
                           <p>
                             Consistency is key for me, and that's exactly what I
-                            found with the Standard Cleaning Service provided by
+                            found with the Regular Cleaning Service provided by
                             this company. The team is reliable, efficient, and
                             my home looks consistently inviting after each
                             visit. Their attention to the finer details is
