--- a/services.html
+++ b/services.html
@@ -170,7 +170,7 @@
                 <img src="assets/img/icon/standard.png" alt="Image Not Found" />
               </div>
               <p>
-                Elevate your space with our Standard Cleaning Service, designed
+                Elevate your space with our Regular Cleaning Service, designed
                 to maintain a consistent level of cleanliness. Choose this
                 service for regular upkeep that leaves your space inviting and
                 comfortable.
@@ -212,7 +212,7 @@
               <p>
                 Experience the ultimate in cleanliness with our Deep Cleaning
                 Service. We ensure a thorough restoration of hygiene and
-                freshness that standard cleaning just can't match.
+                freshness that regular cleaning just can't match.
               </p>
               <h4><a href="contact.html">Deep Cleaning</a></h4>
               <!-- <span>Marketing</span> -->
@@ -419,6 +419,33 @@
         </div>
       </div>
     </div>
+    <!-- Start Blog
+    ============================================= -->
+    <div class="blog-area single full-blog full-blog">
+      <div class="container">
+        <div class="blog-items">
+          <div class="row">
+            <div
+              class="blog-content wow fadeInUp col-lg-10 offset-lg-1 col-md-12"
+            >
+              <div class="blog-style-one item">
+                <div class="blog-item-box">
+                  <div class="info">
+                    <blockquote>
+                      We only use professional cleaning products provided by our
+                      special suppliers. We use Linen Hire from specialised
+                      cleaning linen hire companies. After every use, we make
+                      sure to clean and disinfect all the products we use.
+                    </blockquote>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Blog -->
     <div class="project-style-two-area default-padding">
       <div class="container">
         <div class="row">
@@ -571,7 +598,7 @@
                         <div class="content">
                           <p>
                             Consistency is key for me, and that's exactly what I
-                            found with the Standard Cleaning Service provided by
+                            found with the Regular Cleaning Service provided by
                             this company. The team is reliable, efficient, and
                             my home looks consistently inviting after each
                             visit. Their attention to the finer details is
