--- a/contact.html
+++ b/contact.html
@@ -136,11 +136,7 @@
         <div class="row align-center">
           <div class="col-tact-stye-one col-lg-6">
             <div class="contact-form-style-one">
-              <form
-                action="contact.php"
-                method="POST"
-                class="contact-form contact-form"
-              >
+              <form class="contact-form contact-form">
                 <div class="row">
                   <div class="col-lg-12">
                     <div class="form-group">
@@ -209,7 +205,12 @@
                 </div>
                 <div class="row">
                   <div class="col-lg-12">
-                    <button type="submit" name="submit" id="submit">
+                    <button
+                      type="button"
+                      name="submit"
+                      id="submit"
+                      onclick="Mail()"
+                    >
                       <i class="fa fa-paper-plane"></i> Get in Touch
                     </button>
                   </div>
@@ -301,6 +302,12 @@
               </ul>
             </div>
           </div>
+        </div>
+      </div>
+      <div id="thankYouModal" style="display: none" class="modal">
+        <div class="modal-content">
+          <span class="modal-close" onclick="closeModal()">&times;</span>
+          <p>Thank you for your message! We will get back to you soon.</p>
         </div>
       </div>
     </div>
@@ -446,6 +453,51 @@
 
     <!-- jQuery Frameworks
     ============================================= -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+    <script>
+      function Mail() {
+        let name = document.getElementById("name").value;
+        let email = document.getElementById("email").value;
+        let phone = document.getElementById("phone").value;
+        let subject = document.getElementById("subject").value;
+        let messages = document.getElementById("comments").value;
+
+        let body =
+          "Name: " +
+          name +
+          "<br/> Email: " +
+          email +
+          "<br/> Phone Number: " +
+          phone +
+          "<br/> Subject: " +
+          subject +
+          "<br/> Message: " +
+          messages;
+
+        Email.send({
+          Host: "smtp.elasticemail.com",
+          Username: "mo@regalstay.co.uk",
+          Password: "EDC618DACFBB6E300F5823B4FDB5E18BCDC3",
+          To: "mo@regalstay.co.uk",
+          From: "mo@regalstay.co.uk",
+          Subject: "Mail From Regal Stay Cleaning Contact Form",
+          Body: body,
+        }).then(function (message) {
+          // Redirect after a delay (adjust the delay time as needed)
+          const modal = document.getElementById("thankYouModal");
+          modal.style.display = "flex";
+
+          setTimeout(function () {
+            window.location.href = "index.html";
+          }, 3000); // Redirect after 3 seconds (3000 milliseconds)
+        });
+      }
+      function closeModal() {
+        const modal = document.getElementById("thankYouModal");
+        modal.style.display = "none";
+      }
+    </script>
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/jquery.appear.js"></script>
