--- a/contact.html
+++ b/contact.html
@@ -422,7 +422,7 @@
                   <li>
                     <div class="content">
                       <strong>Phone:</strong>
-                      <a href="tel:+441582753283">+441582753283</a>
+                      <a href="tel:+441582753283">+44 158 275 3283</a>
                     </div>
                   </li>
                 </ul>
@@ -479,7 +479,7 @@
           Host: "smtp.elasticemail.com",
           Username: "mo@regalstay.co.uk",
           Password: "EDC618DACFBB6E300F5823B4FDB5E18BCDC3",
-          To: "mo@regalstay.co.uk",
+          To: "cleaning@regalstay.co.uk",
           From: "mo@regalstay.co.uk",
           Subject: "Mail From Regal Stay Cleaning Contact Form",
           Body: body,
