--- a/services.html
+++ b/services.html
@@ -401,7 +401,7 @@
                     For any assistance needed, don't hesitate to reach out to
                     us. We're here to help.
                   </p>
-                  <h2>+441582753283</h2>
+                  <h2><a href="tel:+441582753283">+44 158 275 3283</a></h2>
                   <h4>
                     <a href="mailto:cleaning@regalstay.co.uk"
                       >cleaning@regalstay.co.uk</a
